--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,6 +20,7 @@ jobs:
         pip install pytest
         pip install pytest-cov
         pip install -r test-requirements.txt
+        pip install -r requirements.txt
         py.test --cov-report term --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
