--- a/setup.cfg
+++ b/setup.cfg
@@ -54,4 +54,4 @@ line-length = 120
 
 [options.entry_points]
 console_scripts =
-  flerovium_web = src.web.run:cli
+  flerovium = src.cnn_builder:cli
